# template-cpp-raylib-catch2

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  addition.cpp  addition.h  main.cpp
tests/: CMakeLists.txt  test.cpp
